<resources>
    <string name="facebook_app_id">750809358388874</string>
    <string name="fb_login_protocol_scheme">fb750809358388874</string>

    <string name="app_name">SBTN TV</string>
    <string name="browse_title"><![CDATA[SBTN]]></string>
    <string name="related_movies">Related Videos</string>
    <string name="episodes_movies">Episode Videos</string>
    <string name="time_line_movies">TimeLine Videos</string>
    <string name="vertical_grid_title"><![CDATA[Vertical Video Grid]]></string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: %1$s</string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>

    <!-- Error messages -->
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>

    <!--Common word-->
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="congratulation">Congratulation</string>
    <string name="login_to_play">Login to Play</string>
    <string name="login_first">Need to login first!!!</string>
    <string name="name_dot">Name: </string>
    <string name="des_dot">Description: </string>
    <string name="du_dot">Duration: </string>
    <string name="du_status">Status: </string>

    <!--Dialog-->
    <string name="dialog_msg_missing_email_pass">"The email or password is empty!"</string>
    <string name="dialog_msg_error_email_pass">"The email or password is invalid!"</string>
    <string name="dialog_msg_error_email">"The email is invalid!"</string>
    <string name="dialog_msg_error_pass">"The password is invalid! Min char is 6"</string>
    <string name="dialog_msg_error_pass_not_match">"The password does not match the confirm password!"</string>
    <string name="dialog_msg_error_email_login_not_active">"Account is not active. Please, active account first!"</string>
    <string name="dialog_msg_error_email_register_not_active">"This account had been registered. Please, active account first!"</string>
    <string name="dialog_msg_error_email_register_exits">"The email is exists. please choose new another email."</string>
    <string name="dialog_msg_error_login_unknown">"Login fail!"</string>
    <string name="dialog_msg_error_register_unknown">"Register fail!"</string>
    <string name="dialog_msg_ok_login">"Welcome! %1$s"</string>
    <string name="dialog_msg_ok_register">"The account was registered successfully! Please, check your email to active this account."</string>
    <string name="dialog_title_enter_promotion">"Enter promotion"</string>
    <string name="dialog_title_buy_package">"Buy Package"</string>
    <string name="dialog_content_service_error">"Sorry! Service error!"</string>
    <string name="dialog_msg_package_for_content">"Please!!! Buy package for view this content."</string>
    <string name="dialog_msg_package_for_max_device">"Your Account is limited Device.\nPlease!!! Buy package for view this content."</string>
    <string name="dialog_msg_close_app">"Close App?"</string>
    <string name="dialog_msg_empty_contents">"No content available!!!"</string>
    <string name="dialog_button_empty_contents">"Buy now"</string>

    <string name="dialog_title_warning">"Warning!!!"</string>
    <string name="dialog_msg_no_permission_to_play">"No permission to play content : \"%1$s\"!!!"</string>

    <!--package-->
    <string name="package_name">"Name: "</string>
    <string name="package_list">"List Package:"</string>
    <string name="package_description">"Description: "</string>
    <string name="package_duration">"Duration: "</string>
    <string name="package_enter_code">"Enter Code"</string>
    <string name="package_buy">"Buy"</string>
    <string name="package_close">"Close"</string>
    <string name="package_add_code">"Add Code"</string>
    <string name="package_code_invalid">"Invalid Promotion code. Please check and try again!"</string>
    <string name="package_empty">"No Package available!!!"</string>

    <!--Hoa Nguyen Define-->
    <string name="home">Home</string>
    <string name="home_provider">Provider</string>
    <string name="home_category">Category</string>
    <string name="home_my_purchased">My Purchased</string>
    <string name="home_purchased_content">Contents</string>
    <string name="home_purchased_package">Packages</string>
    <string name="home_recommendation_videos">Recommendation Videos</string>
    <string name="home_recently_videos">Recently Videos</string>
    <string name="home_popular_videos">Popular Videos</string>
    <string name="home_recommendation_audios">Recommendation Audios</string>
    <string name="home_recently_audios">Recently Audios</string>
    <string name="home_popular_audios">Popular Audios</string>
    <string name="home_settings">Settings</string>
    <string name="home_settings_accounts">Account</string>
    <string name="home_settings_player">Player</string>
    <string name="home_settings_list_package">List Package</string>
    <string name="home_settings_info">Info</string>
    <string name="purchased">PURCHASED</string>
    <string name="play_next_in">Auto Next in\n%d</string>


    <array name="list_account_debug">
        <item>hoa.onworldtv+1@gmail.com,123457</item>
        <item>hoa.onworldtv+2@gmail.com,123456</item>
        <item>hoa.onworldtv+3@gmail.com,123456</item>
        <item>hoa.onworldtv+4@gmail.com,123456</item>
        <item>hoa.onworldtv+5@gmail.com,123456</item>
        <item>hoa.onworldtv+6@gmail.com,123456</item>
        <item>hoa.onworldtv+7@gmail.com,123456</item>
        <item>hoa.onworldtv+8@gmail.com,123456</item>
        <item>hoa.onworldtv+9@gmail.com,123456</item>
        <item>hoa.onworldtv+10@gmail.com,123456</item>
    </array>
</resources>
