<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@drawable/background_shape_circle"
        android:gravity="center"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textStyle="bold"
        tools:text="0.99$" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/package_name"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/package_description"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/package_duration"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <EditText
            android:id="@+id/enter_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/package_enter_code"
            android:imeOptions="actionDone"
            android:minEms="10"
            android:textAllCaps="true"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <TextView
            android:id="@+id/code_invalid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/package_code_invalid"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/Red"
            android:visibility="invisible" />

    </LinearLayout>

</LinearLayout>